--- a/app/src/main/res/layout/bubble_layout.xml
+++ b/app/src/main/res/layout/bubble_layout.xml
@@ -8,11 +8,13 @@ android:padding="15px"
 android:orientation="vertical">
 
     <TextView
-        android:id="@+id/bubble_subdescription"
+        android:id="@+id/bubble_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="18sp" />
+
 
     <TextView
         android:id="@+id/bubble_description"
@@ -22,11 +24,12 @@ android:orientation="vertical">
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/bubble_title"
+        android:id="@+id/bubble_subdescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/bubble_available"
