Realtime data feed to MQ

--- a/app/src/main/res/layout/bookmark_add_dialog.xml
+++ b/app/src/main/res/layout/bookmark_add_dialog.xml
@@ -54,39 +54,40 @@
 
                 </TableRow>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+<!--                -->
+<!--                <TableRow-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent">-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Title" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="Title" />-->
 
-                    <EditText
-                        android:id="@+id/bookmark_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Title" />
+<!--                    <EditText-->
+<!--                        android:id="@+id/bookmark_title"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:hint="Title" />-->
 
-                </TableRow>
+<!--                </TableRow>-->
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+<!--                <TableRow-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent">-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Description" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="Description" />-->
 
-                    <EditText
-                        android:id="@+id/bookmark_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Description" />
+<!--                    <EditText-->
+<!--                        android:id="@+id/bookmark_description"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:hint="Description" />-->
 
-                </TableRow>
+<!--                </TableRow>-->
 
                 <TableRow
                     android:layout_width="match_parent"
