--- a/app/src/main/res/layout/bubble_layout.xml
+++ b/app/src/main/res/layout/bubble_layout.xml
@@ -8,7 +8,7 @@ android:padding="15px"
 android:orientation="vertical">
 
     <TextView
-        android:id="@+id/bubble_title"
+        android:id="@+id/bubble_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,14 +17,14 @@ android:orientation="vertical">
 
 
     <TextView
-        android:id="@+id/bubble_description"
+        android:id="@+id/bubble_last_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/bubble_subdescription"
+        android:id="@+id/bubble_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
