--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#89a3b2</color>
+    <color name="colorPrimaryDark">#5e6073</color>
+    <color name="colorAccent">#b2d3be</color>
     <color name="yellow">#FFCD40</color>
     <color name="green">#00F287</color>
 </resources>
