--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,9 +6,11 @@
 
     <org.osmdroid.views.MapView
         android:id="@+id/mapview"
+        tilesource="Mapnik"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tilesource="Mapnik" />
+        android:layout_height="match_parent">
+
+    </org.osmdroid.views.MapView>
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -24,6 +26,21 @@
         android:background="#00ffffff"
         android:contentDescription="@string/bt_center_map_description"
         android:cropToPadding="true" />
+
+    <TextView
+        android:id="@+id/ic_credit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/custom_rectangle"
+        android:gravity="center"
+        android:paddingLeft="20dp"
+        android:paddingTop="5dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="5dp"
+        android:text="100"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
