--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -27,20 +27,30 @@
         android:contentDescription="@string/bt_center_map_description"
         android:cropToPadding="true" />
 
-    <TextView
-        android:id="@+id/ic_credit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:padding="5dp"
+
+        android:layout_width="wrap_content"
         android:background="@drawable/custom_rectangle"
-        android:gravity="center"
-        android:paddingLeft="20dp"
-        android:paddingTop="5dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="5dp"
-        android:text="100"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Credit: "
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/ic_credit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="-"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 
 </RelativeLayout>
