--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,16 @@
         <item name="colorButtonNormal">@color/yellow</item>
     </style>
 
+    <style name="AppTheme.BlackButton">
+        <item name="colorButtonNormal">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AppTheme.BlueButton">
+        <item name="colorButtonNormal">@color/blue</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="AppTheme.GreenRipple">
         <item name="colorButtonNormal">@color/green</item>
     </style>
