--- a/app/src/main/res/layout/bubble_parking_spot_layout.xml
+++ b/app/src/main/res/layout/bubble_parking_spot_layout.xml
@@ -1,39 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/bubble_parking_spot_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/bubble_parking_spot_layout"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:background="@drawable/bonuspack_bubble"
 android:padding="15px"
 android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/bubble_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView"
-        android:textSize="26sp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/bubble_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/bubble_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="26sp" />
 
-    <TextView
-        android:id="@+id/bubble_last_update"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+            <TextView
+                android:id="@+id/bubble_parking_zone_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/bubble_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/bubble_last_update"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/bubble_parking_spot_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="fitStart"
+            app:srcCompat="@drawable/unconfirmed_0" />
+
+    </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
@@ -51,9 +81,17 @@ android:orientation="vertical">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:theme="@style/AppTheme.BlackButton"
-            android:text="Change to Unavailable" />
+            android:text="Change to Unavailable"
+            android:theme="@style/AppTheme.BlackButton" />
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/bubble_hidden_padding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="   " />
 
 
 </LinearLayout>
