--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="blue">#008fb3</color>
     <color name="white">#ffffff</color>
 
+    <color name="red">#ff0000</color>
     <color name="light_red">#f59198</color>
     <color name="orange">#ff9900</color>
     <color name="light_yellow">#ffec97</color>
