--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,12 @@
 
     <style name="AppTheme.GreenRipple">
         <item name="colorButtonNormal">@color/green</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="AppTheme.RedButton">
+        <item name="colorButtonNormal">@color/red</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
