--- a/app/src/main/res/layout/bubble_parking_zone_layout.xml
+++ b/app/src/main/res/layout/bubble_parking_zone_layout.xml
@@ -45,7 +45,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/total"
+                android:id="@+id/bubble_parking_spot_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="40px"
