--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_activity"
-        android:name="au.edu.anu.cs.sparkee.ui.activity.ActivityFragment"
+        android:name="au.edu.anu.cs.sparkee.ui.participation.ParticipationFragment"
         android:label="@string/title_activity"
         tools:layout="@layout/fragment_activity" />
 
