--- a/app/src/main/res/layout/list_empty_participation.xml
+++ b/app/src/main/res/layout/list_empty_participation.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="No Activity"
+        android:text="No Participation"
         android:textColor="@color/colorSecondaryText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
