--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_participation" />
 
     <fragment
-        android:id="@+id/navigation_profile"
-        android:name="au.edu.anu.cs.sparkee.ui.profile.NotificationsFragment"
-        android:label="@string/title_profile"
+        android:id="@+id/navigation_summary"
+        android:name="au.edu.anu.cs.sparkee.ui.summary.SummaryFragment"
+        android:label="@string/title_summary"
         tools:layout="@layout/fragment_profile" />
 </navigation>
