--- a/app/src/main/res/layout/list_item_participation.xml
+++ b/app/src/main/res/layout/list_item_participation.xml
@@ -79,7 +79,7 @@
 
         <LinearLayout
             android:id="@+id/layout_info_kanan"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="right"
@@ -87,17 +87,22 @@
 
             <TextView
                 android:id="@+id/txt_credit"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="+1"
+                android:gravity="right"
+                android:text="0"
                 android:textColor="#212121"
                 android:textSize="18dp" />
 
-            <ImageView
-                android:id="@+id/img_participation_status"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                />
+            <TextView
+                android:id="@+id/txt_balance"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="(0)"
+                android:textColor="#3d3d3d"
+                android:textSize="12dp" />
+
 
         </LinearLayout>
     </LinearLayout>
