--- a/app/src/main/res/layout/list_item_participation.xml
+++ b/app/src/main/res/layout/list_item_participation.xml
@@ -79,7 +79,7 @@
 
         <LinearLayout
             android:id="@+id/layout_info_kanan"
-            android:layout_width="40dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="right"
@@ -87,7 +87,7 @@
 
             <TextView
                 android:id="@+id/txt_credit"
-                android:layout_width="40dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="0"
@@ -96,7 +96,7 @@
 
             <TextView
                 android:id="@+id/txt_balance"
-                android:layout_width="40dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="(0)"
