--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
         <!-- Applied to framework control highlights (i.e ripples or list selectors) -->
 <!--        <item name="colorControlHighlight">@color/controlActivated</item>-->
 
-        <!-- Enable these below if you want clicking icons to trigger a ripple effect -->
+        <!-- Enable these below if you want clicking icons to trigger a.properties ripple effect -->
         <!--
         <item name="selectableItemBackground">?android:selectableItemBackground</item>
         <item name="selectableItemBackgroundBorderless">?android:selectableItemBackground</item>
